// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<CarouselItemsContainer /> > It should hide index 1`] = `
<div>
  <section
    aria-label="Carousel"
    aria-roledescription="carousel"
    class="carouselSection"
    tabindex="0"
  >
    <div
      aria-live="off"
      class="container flexDisplay alignCenter fullHeight"
      style="transform: translateX(0px); transition-duration: 0s;"
    >
      <img
        alt="pic1"
      />
      <img
        alt="pic2"
      />
    </div>
  </section>
</div>
`;

exports[`<CarouselItemsContainer /> > It should not render the arrows by default 1`] = `
<div>
  <section
    aria-label="Carousel"
    aria-roledescription="carousel"
    class="carouselSection"
    tabindex="0"
  >
    <span>
      1/2
    </span>
    <div
      aria-live="off"
      class="container flexDisplay alignCenter fullHeight"
      style="transform: translateX(0px); transition-duration: 0s;"
    >
      <img
        alt="pic1"
      />
      <img
        alt="pic2"
      />
    </div>
  </section>
</div>
`;

exports[`<CarouselItemsContainer /> > It should render 1`] = `
<div>
  <section
    aria-label="Carousel"
    aria-roledescription="carousel"
    class="carouselSection"
    tabindex="0"
  >
    <span>
      1/2
    </span>
    <div
      aria-live="off"
      class="container flexDisplay alignCenter fullHeight"
      style="transform: translateX(0px); transition-duration: 0s;"
    >
      <img
        alt="pic1"
      />
      <img
        alt="pic2"
      />
    </div>
  </section>
</div>
`;

exports[`<CarouselItemsContainer /> > It should render the arrows when showArrows prop is true 1`] = `
<div>
  <section
    aria-label="Carousel"
    aria-roledescription="carousel"
    class="carouselSection"
    tabindex="0"
  >
    <span>
      1/2
    </span>
    <button
      aria-label="Previous slide"
      class="arrowButton left"
      data-testid="arrow-button-left"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        fill-rule="evenodd"
        focusable="false"
        height="15"
        preserveAspectRatio="xMidYMax meet"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        viewBox="-.2 -.3 8 5"
        width="40"
      >
        <polyline
          points="1 1 3.77984472 4 6.53846154 1"
        />
      </svg>
    </button>
    <div
      aria-live="off"
      class="container flexDisplay alignCenter fullHeight"
      style="transform: translateX(0px); transition-duration: 0s;"
    >
      <img
        alt="pic1"
      />
      <img
        alt="pic2"
      />
    </div>
    <button
      aria-label="Next slide"
      class="arrowButton right"
      data-testid="arrow-button-right"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        fill-rule="evenodd"
        focusable="false"
        height="15"
        preserveAspectRatio="xMidYMax meet"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        viewBox="-.2 -.3 8 5"
        width="40"
      >
        <polyline
          points="1 1 3.77984472 4 6.53846154 1"
        />
      </svg>
    </button>
  </section>
</div>
`;
